--- a/app/src/main/res/layout/queue_drawer_list_layout.xml
+++ b/app/src/main/res/layout/queue_drawer_list_layout.xml
@@ -1,5 +1,4 @@
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/background"
@@ -7,7 +6,6 @@
     android:layout_height="wrap_content"
     android:background="?selectableItemBackground"
     android:foreground="?selectableItemBackground"
-    app:cardBackgroundColor="@color/colorPrimary"
     app:cardCornerRadius="0dp"
     app:cardElevation="0dp">
 
@@ -26,7 +24,8 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:padding="8dp"
-            app:srcCompat="@drawable/drawable_drag"/>
+
+            app:srcCompat="@drawable/drawable_drag" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -44,9 +43,8 @@
                 android:ellipsize="end"
                 android:singleLine="true"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/white"
                 tools:text="Reyansh"
-                tools:textColor="#000"/>
+                tools:textColor="#000" />
 
             <TextView
                 android:id="@+id/song_artist"
@@ -57,7 +55,7 @@
                 android:singleLine="true"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/textColorSecondary"
-                tools:text="Justin Beiber"/>
+                tools:text="Justin Beiber" />
         </LinearLayout>
 
         <com.boom.music.player.Views.MusicVisualizer
@@ -65,8 +63,7 @@
             android:layout_width="25dp"
             android:layout_height="30dp"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            />
+            android:layout_centerVertical="true" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
