--- a/app/src/main/res/layout/layout_bottomsheet_info.xml
+++ b/app/src/main/res/layout/layout_bottomsheet_info.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#cfcece"
-                android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/drawable_dialogs_background"
+    android:orientation="vertical"
+    android:padding="1dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/best_matches"
@@ -27,7 +28,7 @@
                 android:background="?selectableItemBackground"
                 android:padding="12dp"
                 android:tint="@color/pink"
-                app:srcCompat="@drawable/drawable_arrow_back"/>
+                app:srcCompat="@drawable/drawable_arrow_back" />
 
             <EditText
                 android:id="@+id/edit_text_search"
@@ -40,7 +41,7 @@
                 android:padding="8dp"
                 android:singleLine="true"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/gray"/>
+                android:textColor="@color/gray" />
 
             <ImageButton
                 android:id="@+id/image_button_cross"
@@ -52,7 +53,7 @@
                 android:padding="12dp"
                 android:tint="@color/gray"
                 android:visibility="invisible"
-                app:srcCompat="@drawable/cross_light"/>
+                app:srcCompat="@drawable/cross_light" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
@@ -64,21 +65,20 @@
         android:layout_below="@+id/best_matches"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        tools:listitem="@layout/list_view_item"/>
+        tools:listitem="@layout/list_view_item" />
 
     <View
         android:id="@+id/shadow"
         android:layout_width="match_parent"
         android:layout_height="4dp"
         android:layout_below="@+id/best_matches"
-        android:background="@drawable/drawable_drop_shadow"
-        />
+        android:background="@drawable/drawable_drop_shadow" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true" />
 
     <TextView
         android:id="@+id/text_view_no_matches_found"
@@ -87,6 +87,6 @@
         android:layout_centerInParent="true"
         android:text="@string/no_results_found"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 </RelativeLayout>
