--- a/app/src/main/res/drawable/repeat_a_b.xml
+++ b/app/src/main/res/drawable/repeat_a_b.xml
@@ -6,5 +6,5 @@
     android:viewportWidth="24">
     <path
         android:fillColor="@color/green"
-        android:pathData="M42,39 L12,39 L12,30 L0,42 L12,54 L12,45 L48,45 L48,27 L42,27 L42,39 Z M12,15 L42,15 L42,24 L54,12 L42,0 L42,9 L6,9 L6,27 L12,27 L12,15 Z" />
+        android:pathData="M13,15V9H12L10,10V11H11.5V15M17,17H7V14L3,18L7,22V19H19V13H17M7,7H17V10L21,6L17,2V5H5V11H7V7Z" />
 </vector>
